using useState hook to set up state in the Meme component

--- a/src/styles.css
+++ b/src/styles.css
@@ -58,3 +58,10 @@ main {
     cursor: pointer;
 
 }
+
+.meme--image {
+    max-width: 100%;
+    grid-column: 1 / -1;
+    padding: 36px;
+    border-radius: 2px;
+  }
