--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,10 @@ body {
     margin: 0;
 }
 
+.main {
+    padding: 36px;
+}
+
 .header {
     display: flex;
     align-items: center;
@@ -40,6 +44,7 @@ main {
     /* grid-template-rows / grid-template-columns values */
     grid-template: 40px 40px / 1fr 1fr;
     gap: 17px;
+    margin-bottom: 17px;
 
 }
 
@@ -59,9 +64,44 @@ main {
 
 }
 
+.meme {
+    position: relative;
+}
+
 .meme--image {
     max-width: 100%;
-    grid-column: 1 / -1;
-    padding: 36px;
-    border-radius: 2px;
+    border-radius: 3px;
   }
+
+  .meme--text {
+    position: absolute;
+    width: 80%;
+    text-align: center;
+    left: 50%;
+    transform: translateX(-50%);
+    margin: 15px 0;
+    padding: 0 5px;
+    font-family: impact, sans-serif;
+    font-size: 2em;
+    text-transform: uppercase;
+    color: white;
+    letter-spacing: 1px;
+    text-shadow:
+        2px 2px 0 #000,
+        -2px -2px 0 #000,
+        2px -2px 0 #000,
+        -2px 2px 0 #000,
+        0 2px 0 #000,
+        2px 0 0 #000,
+        0 -2px 0 #000,
+        -2px 0 0 #000,
+        2px 2px 5px #000;
+}
+
+.bottom {
+    bottom: 0;
+}
+
+.top {
+    top: 0;
+}
